--- a/philo/Makefile
+++ b/philo/Makefile
@@ -13,7 +13,7 @@
 NAME		=	philo
 
 CC			=	gcc
-CFLAGS		=	-g -Werror -Wextra -Wall
+CFLAGS		=	-Werror -Wextra -Wall
 
 SRC_PATH	=	src/
 OBJ_PATH	=	obj/
